tests/http/snapshots/http__v2_stats__user_stats.snap
---
source: tests/http/v2_stats.rs
expression: "get(\"/api/v2/channels/11111/users/22222/stats\").send().await"
---
GET /api/v2/channels/11111/users/22222/stats
status: 200 OK
content-type: application/json
cache-control: no-cache
---
{
  "messageCount": 4,
  "userId": "22222"
}
